[package]
name = "urlshortner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
lazy_static = "1.4.0"
reqwest = "0.11"
actix-rt = "2.9.0"